--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -314,7 +314,7 @@
 }
 
 /******************* General ****************************/
-.no-projects {
+.no-items {
   color: #aaaaaa;
   left: 50%;
   text-align: center;
