change github events to newsfeed

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -327,6 +327,10 @@
 }
 
 /******************* General ****************************/
+.todo-empty {
+  margin-top: 100px;
+}
+
 .no-items {
   color: #aaaaaa;
   left: 50%;
