--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -327,7 +327,7 @@
 }
 
 /******************* General ****************************/
-.todo-empty {
+.no-items.todo-empty {
   margin-top: 100px;
 }
 
