--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -35,9 +35,9 @@
 /*************************** files area *******************/
 .drive-drop-zone {
   border: dashed #7a7a7a;
-  min-height: 100px;
+  min-height: 90px;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .drive-drop-zone p {
@@ -54,12 +54,7 @@
   float:right;
 }
 
-.milestone-view, .files-list {
-  overflow-y: auto;
-}
-
 .milestone-view {
-  max-height: 70vh;
   min-height: 50vh;
   margin-top: 20px;
   padding: 20px;
@@ -354,6 +349,7 @@
 .collab-logo h3 {
   margin-left: 60px;
   padding-top: 15px;
+  color: white;
 }
 
 .left-panel {
@@ -364,12 +360,12 @@
 
 .collab-logo {
   margin-top: -20px;
-  background: #424242;
   height: 50px;
 }
 
 .body-wrapper {
   width: 95%;
+  margin-top: 70px;
 }
 
 .my-step-container {
