--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -127,10 +127,6 @@
     color: #757575;
 }
 
-.assignee-avatar {
-  display: inline-block;
-  float: right;}
-
 /************************ Project list *******************/
 .project-list ul, .project-list li {
   margin-left: 0;
@@ -322,6 +318,24 @@
 }
 
 /******************* General ****************************/
+.avatar-list {
+  list-style: none;
+  float: right;
+  display: flex;
+}
+
+.avatar-list li {
+  padding-left: 3px;
+}
+
+.assignee-avatar {
+  float: right;
+}
+
+.square-avatar {
+  border-radius: 0 !important;
+}
+
 .no-items.todo-empty {
   margin-top: 100px;
 }
