--- a/server/views/index.html
+++ b/server/views/index.html
@@ -23,6 +23,9 @@
                     client_id: '300282221041-etbepkgu5gvfmo7fhd2khp1rv4ktm7b7.apps.googleusercontent.com',
                     scope: 'https://www.googleapis.com/auth/drive'
                 });
+                if (localStorage.jwt && localStorage.google_token) {
+                    window.location.assign('http://localhost:4000/app');
+                }
             });
         }
     </script>
@@ -36,13 +39,15 @@
             <hr>
             <a class="btn btn-social btn-google" onclick="loginGoogle()">
                 <span class="fa fa-google"></span>
-                Sign in with Google
+                <span class="login-btn-text">Sign in with Google</span>
             </a>
         </div>
     </div>
 </header>
 <script>
     function signInCallback(authResult) {
+        console.log('callback')
+        console.log(authResult)
         if (authResult.code) {
             $.ajax({
                 type: 'POST',
@@ -56,6 +61,7 @@
                 localStorage.setItem('display_name', res.display_name);
                 localStorage.setItem('display_image', res.display_image);
                 localStorage.setItem('google_token', res.google_token);
+                localStorage.setItem('expiry_date', res.expiry_date);
                 window.location.assign('http://localhost:4000/app');
             }).fail(function(res) {
                 console.error(res)
@@ -63,6 +69,7 @@
         }
     }
     function loginGoogle() {
+        $('.login-btn-text').text('Logging in...')
         auth2.grantOfflineAccess({'redirect_uri': 'postmessage'}).then(signInCallback);
     }
 </script>
