filter search results

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -322,6 +322,10 @@
 }
 
 /******************* General ****************************/
+.filter-by {
+  float: right;
+}
+
 .avatar-list {
   list-style: none;
   float: right;
