display more repos and improve syncing performance

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -439,3 +439,8 @@
 .notif-buttons {
   margin-left: 43px;
 }
+
+/************************ Settings **************************/
+.settings-btn {
+  margin-left: 20px;
+}
