--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" type="text/css" href="/assets/home/css/home.css">
     <link rel="stylesheet" type="text/css" href="/assets/home/css/bootstrap-social.css">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js?onload=start" async defer></script>
 
     <script>
-        var HOSTNAME = 'http://nuscollab.com'
+        var HOSTNAME = 'https://collab.hooitong.com'
         function start() {
             gapi.load('auth2', function() {
                 auth2 = gapi.auth2.init({
