Changed login form redirect_uri to the correct domain

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -18,7 +18,7 @@
     <script src="https://apis.google.com/js/platform.js?onload=start" async defer></script>
 
     <script>
-        var HOSTNAME = 'https://collab.hooitong.com'
+        var HOSTNAME = 'https://nuscollab.com'
         function start() {
             gapi.load('auth2', function() {
                 auth2 = gapi.auth2.init({
