--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -1,3 +1,13 @@
+/*********************** TreeNode *******************/
+.borderless {
+  border: none;
+}
+.node-title {
+  height: auto;
+  width: 100%;
+  border: 1 1 1 1;
+}
+
 /*********************** Dashboard *******************/
 .project-panel {
   /*padding: 5px 5px 5px 5px;*/
