--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -324,7 +324,14 @@
 .milestone-menu-view {
   height: auto;
   margin-top: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  padding-bottom: 10px;
+  border-radius: 1px;
+}
+.milestone-content-view {
+  height: auto;
+  margin-top: 5px;
+
   border-radius: 1px;
 }
 .milestone-row {
