--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -65,14 +65,19 @@ html, body{
 
 .drive-drop-zone {
   border: dashed #7a7a7a;
-  min-height: 90px;
+  min-height: 300px;
+  position: absolute;
+  width:100%;
+  height: 100%;
+  display: table;
   text-align: center;
   margin-bottom: 20px;
 }
 
 .drive-drop-zone p {
   color: #7a7a7a;
-  margin-top: 35px;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .set-root-dir {
