--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -100,6 +100,9 @@ html, body{
   /*min-height: 40px;*/
   margin: 5px 10px 0px 10px;
 }
+.completed-task-row {
+  color: #757575;
+}
 
 .task-content{
   display: inline-block;
@@ -144,7 +147,7 @@ html, body{
 }
 
 .completed-task-list {
-    color: #757575;
+    /*color: #757575;*/
 }
 
 /************************ Project list *******************/
