remove border on dialog

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -9,7 +9,7 @@ html, body{
 }
 /*********************** TreeNode *******************/
 .borderless {
-  border: none;
+  border: none !important;
 }
 .node-title {
   height: auto;
