--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -6,6 +6,7 @@ html, body{
   padding: auto;
   position:relative;
   height: 100%;
+  min-height: 100%;
   min-width:1024px; /* suppose you want minimun width of 1000px */
   width: auto !important;  /* Firefox will set width as auto */
   width:1024px;             /* As IE ignores !important it will set width as 1000px; */
@@ -66,11 +67,12 @@ html, body{
 }
 
 .drive-drop-zone {
+  overflow:hidden;
   border: dashed #7a7a7a;
   min-height: 300px;
+  height: 300px;
   position: absolute;
   width:100%;
-  height: 100%;
   display: table;
   text-align: center;
   margin-bottom: 20px;
