--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -10,6 +10,7 @@ html, body{
   min-width:1100px; /* suppose you want minimun width of 1000px */
   width: auto !important; /* Firefox will set width as auto */
   width:1100px; /* As IE ignores !important it will set width as 1000px; */
+  font-family: Roboto, sans-serif;
 }
 /*********************** TreeNode *******************/
 .borderless {
@@ -206,16 +207,19 @@ html, body{
 /***************** Header *****************/
 
 .navbar-right {
-  margin-right: 80px;
+  margin-right: 20px;
 }
 
 .navbar-default {
-  background-color: #424242;
   border-color: #455a64;
   border-radius:0;
-  -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
-  -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
-  box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px;
+  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px;
+  /*rgba(0, 0, 0, 0.117647) 0px 1px 4px*/
+  /*-webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);*/
+  /*-moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);*/
+  /*box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);*/
 }
 .navbar-default .navbar-brand {
   color: #ecf0f1;
@@ -306,10 +310,8 @@ html, body{
   width: 25%;
 }
 .search-box {
-  margin-left: 10%;
   width: 100%;
   color: white;
-  /*min-width: 400px;*/
 }
 
 .display-pic-li {
@@ -523,4 +525,7 @@ html, body{
   height: 150px;
   overflow-y: auto;
   background-color: white;
+}
+.inline-search-entry {
+  background-color: red;
 }
