enlarge body wrapper size

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -449,8 +449,8 @@ html, body{
 
 .body-wrapper {
   width: 99%;
-  height: 80%;
-  margin-top: 69px;
+  height: 90%;
+  padding-top: 69px;
   position: relative;
 }
 .main-content {
