Add exclamation mark

--- a/server/views/login.html
+++ b/server/views/login.html
@@ -35,7 +35,7 @@
     <div class="header-content">
       <div class="inner">
         <h1>Collab</h1>
-        <h4>Helping small teams do big things</h4>
+        <h4>Helping small teams do big things!</h4>
         <hr>
         <a class="btn btn-social btn-google" onclick="loginGoogle()">
           <span class="fa fa-google"></span>
